objects/AIA_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Structure_s_Level_of_Complexity__c</fullName>
        <description>Structure's Level of Complexity</description>
        <label>Structure's Level of Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Group_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>story 3416 - aia</description>
        <label>Sub Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations (Sub Group Account)</relationshipLabel>
        <relationshipName>ImplementationsSubGroupAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Enrollment_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Enrollment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>View_SLA_Broken_Tasks__c</fullName>
        <description>US463</description>
        <formula>HYPERLINK("/one/one.app#/sObject/00O0R000000SQl8UAG/view?fv1=" &amp; Name ,"Click Here")</formula>
        <inlineHelpText>Click here to view the tasks for which SLA is broken, for this implementation.</inlineHelpText>
        <label>View SLA Broken Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WPTask_update_number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This will be incremented by 1 when ever a WPTask is updated to complete</description>
        <label>WPTask update number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AIA_Workplan_Type__c.Used_For__c</field>
                <operation>equals</operation>
                <value>Implementation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>oppMarketSeg__c</fullName>
        <formula>Text(Opportunity__r.Market_Segment_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>oppMarketSeg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vision_with_platform_indicator__c</fullName>
        <formula>if( Benefit_Request_Form__r.count_of_vision_with_platform_indicator__c&gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vision with platform indicator</label>
        <type>Checkbox</type>
    </fields>
    <label>Implementation</label>
    <nameField>
        <displayFormat>IMP-{000000}</displayFormat>
        <label>Implementation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AIA_Implementation_Queue_AIA_Implementation</fullName>
        <filterScope>Queue</filterScope>
        <label>AIA Implementation Queue</label>
        <queue>AIA_Implementation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Legal_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In-Progress</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Imp_not_started</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Imp not started</label>
    </listViews>
    <listViews>
        <fullName>NCR_Implementation_View</fullName>
        <columns>Account__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Risk_Type__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Imp_PM__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Backend_BRF_Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Business_Type__c</field>
            <operation>equals</operation>
            <value>NCR</value>
        </filters>
        <label>NCR Implementation View</label>
    </listViews>
    <listViews>
        <fullName>Rick_Imp</fullName>
        <columns>Account__c</columns>
        <columns>Business_Type__c</columns>
        <columns>Risk_Type__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Imp_PM__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Backend_BRF_Effective_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Business_Type__c</field>
            <operation>notEqual</operation>
            <value>NCR</value>
        </filters>
        <label>Rick's Implementation View</label>
    </listViews>
    <validationRules>
        <fullName>EIMP001</fullName>
        <active>false</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(AND(IF( Generate_Workplan_Stages__c  = true, false, true), ISCHANGED( Generate_Workplan_Stages__c )))</errorConditionFormula>
        <errorMessage>You Cannot Uncheck Generate Workplan Stages</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIMP002</fullName>
        <active>true</active>
        <description>B-03416 : If Account field Has Sub Groups = TRUE, then Sub Group Account is mandatory, else must be set to BLANK. the field cannot have a value if Has Sub Groups = FALSE.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c &amp;&amp; ISBLANK(Account__c)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>EIMP002 : The Parent Account related to this Implementation has Sub Groups associated. Please select a valid Sub Group Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIMP003</fullName>
        <active>true</active>
        <description>B-03416 : If Account field Has Sub Groups = TRUE, then Sub Group Account is mandatory, else must be set to BLANK. the field cannot have a value if Has Sub Groups = FALSE.</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; NOT(Benefit_Request_Form__r.Account__r.Has_Sub_Groups__c) &amp;&amp; NOT(ISBLANK(Parent_Account__c))</errorConditionFormula>
        <errorDisplayField>Parent_Account__c</errorDisplayField>
        <errorMessage>EIMP003 : The Account related to this Implementation does not have Sub Groups associated. Please clear the value in this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IMP004</fullName>
        <active>true</active>
        <description>To not allow user to change the status when its completed</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;(ISPICKVAL(PRIORVALUE( Status__c ),"Completed")&amp;&amp; ISCHANGED( Status__c ))</errorConditionFormula>
        <errorMessage>User cannot change the status once it is "Completed"</errorMessage>
    </validationRules>
</CustomObject>